--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://priyan1995.github.io/portfolio",
+  "homepage": "https://priyan1995.github.io/priyan-portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
